--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,9 @@
 #
 ---
 include:
-  - board: nice_nano
-    shield: corne_left
-  - board: nice_nano
-    shield: corne_right
+  - board: nice_nano_v2
+    shield: sprinks_left
+  - board: nice_nano_v2
+    shield: sprinks_right
+  - board: nice_nano_v2
+    shield: settings_reset
